# Kaisen

./: .flake8  .gitignore  .pre-commit-config.yaml  AWSLambdaExercise.py  CONTRIBUTE.md  README.md  pyproject.toml
Akwue/: leticia.py
Kaisen/: LICENSE
kaisen/: .gitignore  CONTRIBUTE.md
kaisen/devops/: jp.drawio  jp_1.drawio
kaisen/kaisen/: main.py
kaisen/kaisen/kaisen/src/deji/: file.py
kaisen/kaisen/kaisen/src/demo/: file.py
kaisen/kaisen/kaisen/src/raliat/: addition.py  file.py
kaisen/kaisen/src/Akwue/: leticia.py
kaisen/kaisen/src/Dayo/: file.py
kaisen/kaisen/src/apis/: demo.py
kaisen/kaisen/src/deji/: file.py
kaisen/kaisen/src/demo/: __init__.py  begin.py  file.py  file2.py  funcs.py  obj1.py  object_oriented.py
kaisen/kaisen/src/exceptions/: exception.py
kaisen/kaisen/src/ore/: AWSLambdaExercise.py  Creating_a_list_of_numbers.py  file 2.py  file.py  file2.py  file_1.py
kaisen/kaisen/src/raliat/: file.py  function.py  list.py  p.py
kaisen/kaisen/src/taiwo/: api_call.py  create_vm_developers.py  exceptions.py  in-built-function.py  nested_function.py  sum.py
kaisen/kaisen/src/teekay/: file.py
kaisen/kaisen/src/utils/: util_functions.py
kaisen/kaisen/tests/: test_api.py
ore2/: file2.py
raliat/: addition.py  file1.py  two.py
